<resources>
    <string name="app_name">Check Book</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="deleteQuestion">Do you really want to delete it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="addBookButton">Add Book</string>
    <string name="searchBookButton">Search Book</string>
    <string name="myLibraryButton">My Library</string>
    <string name="isbnText">Isbn</string>
    <string name="authorText">Author</string>
    <string name="titleText">Title</string>
    <string name="addImageText">Add an Image</string>
    <string name="addImageButton">Browse</string>
    <string name="sendButton">Send</string>
    <string name="toastEmptyField">You should fill the empty fields!</string>
    <string name="modifyButton">Modify</string>
    <string name="mainActivity">Check Book</string>
    <string name="addBookLibraryActivity">Add a Book</string>
    <string name="modifyBookLibraryActivity">Modify a Book</string>
    <string name="bookAlreadyExist">This ISBN already exists</string>
    <string name="descriptionText">Description</string>
    <string name="getBookInfosButton">Get book infos</string>
    <string name="ownerText">Owner</string>
    <string name="borrowerText">Borrower</string>
    <string name="commentText">Comment</string>
    <string name="isbnCantComplet">This ISBN is not associated with a book</string>
    <string name="isbnNotGoodFormat">The ISBN should contain 13 characters</string>
    <string name="summaryText">Summary</string>
    <string name="isReadText">Read</string>
    <string name="isBorrowedText">Borrowed</string>
    <string name="collectionText">Collection</string>
    <string name="authorsText">Author(s)</string>
    <string name="typesText">Type(s)</string>
    <string name="editorText">Editor</string>
    <string name="yearText">Year</string>
    <string name="addAuthorsText">Add Author</string>
    <string name="publisherText">Publisher</string>
    <string name="addBookFormButton">Form</string>
    <string name="addBookFormIsbnButton">ISBN Form</string>
    <string name="addBookScanIsbnButton">ISBN Scan</string>
    <string name="read">Read</string>
    <string name="notRead">Not Read</string>
    <string name="borrowed">Borrowed by </string>
    <string name="typesSpinnerText">Choose a type</string>
    <string name="pickSomeTypes">Pick some types</string>
    <string name="validate">Validate</string>
    <string name="createNewType">Create New Type</string>
    <string name="addTypeText">Add Type</string>
    <string name="collectionButton">Book Collections</string>
    <string name="activityCollectionTitle">Collections List</string>
    <string name="addCollection">Add Collection</string>
    <string name="bookLibraryTitle">Book Library</string>
    <string name="collectionTitle">Collection</string>
    <string name="addBookByIsbnText">Add a Book by ISBN</string>
    <string name="findBook">Find book(s)</string>
    <string name="cancel">Cancel</string>
    <string name="founded">founded</string>
    <string name="addBookQuestion">Which one do you want to add?</string>
    <string name="scanFailed">The scan didn\'t work properly.</string>
    <string name="isbnNotFound">No books were found for this ISBN.</string>
    <string name="emptyTypeList">The type list is empty.</string>
    <string name="editTypes">Edit types</string>
    <string name="addCollectionActivityTitle">New Collection</string>
    <string name="createCollectionButton">Create</string>
    <string name="nameCollectionCreation">Name</string>
    <string name="collectionNameEmpty">Please choose a name</string>
    <string name="modifyCollectionActivity">Modify Collection</string>
    <string name="deleteCollectionButton">Delete Collection</string>
    <string name="deleteCollectionQuestion">Do you really want to delete the collection ?</string>
    <string name="alreadyExistCollection">Collection already exist, choose an other name</string>
    <string name="save">Save</string>
    <string name="addBookToCollection">Add Book</string>
    <string name="selectBook">Select Books</string>
    <string name="add">Add</string>
    <string name="noPermission">The permission are not granted</string>
    <string name="deleteBookFromCollection">Delete Book</string>
    <string name="delete">Delete</string>
    <string name="deleteButton">Delete</string>
    <string name="deleteAuthors">Which authors do you want to delete?</string>
    <string name="typeAlreadyExist">The type already exist</string>
    <string name="loading">Loading...</string>
    <string name="authorAlreadyExist">This author already exist.</string>

</resources>
