<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_display_book"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_marginTop="-5dp"
    tools:context="com.example.basaile92.listelivre.fragment.DisplayBookFragment"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideOverlay"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layout">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:gravity="center"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="73dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="15dp"
                        android:gravity="right">

                        <ImageView
                            android:text="@string/modifyButton"
                            android:layout_height="30dp"
                            android:id="@+id/editButton"
                            android:gravity="center"
                            android:src="@drawable/pencil"
                            android:layout_width="30dp"
                            android:layout_marginRight="10dp" />

                        <ImageView
                            android:text="@string/deleteButton"
                            android:layout_height="30dp"
                            android:id="@+id/deleteButton"
                            android:gravity="center"
                            android:src="@drawable/delete"
                            android:layout_width="30dp" />

                    </LinearLayout>
                </LinearLayout>

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/imageButton"
                    android:src="@drawable/puzzle"
                    app:civ_border_color="@color/cardview_shadow_start_color"
                    app:civ_border_width="4dp"
                    app:civ_shadow_radius="10"
                    android:layout_height="254dp"
                    app:civ_shadow="true"
                    android:layout_weight="0.49"
                    android:layout_width="254dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:background="@android:color/white"
                android:layout_marginTop="2.5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:id="@+id/titleLayout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/titleLabel"
                    android:textSize="15sp"
                    android:text="@string/titleText"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/titleText"
                    android:textSize="18sp"
                    android:text="@string/titleText"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:background="@android:color/white"
                android:layout_marginTop="2.5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:id="@+id/authorLayout">

                <TextView
                    android:text="@string/authorsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/authorLabel"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <TextView
                    android:text="@string/authorsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/authorText"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textColor="@android:color/black" />

            </LinearLayout>


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:background="@android:color/white"
                android:layout_marginTop="2.5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:id="@+id/publisherLayout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/publisherLabel"
                    android:textSize="15sp"
                    android:text="@string/publisherText"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/publisherText"
                    android:textSize="18sp"
                    android:text="@string/publisherText"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:background="@android:color/white"
                android:layout_marginTop="2.5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:id="@+id/yearLayout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/yearLabel"
                    android:inputType="number"
                    android:textSize="15sp"
                    android:text="@string/yearText"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/yearText"
                    android:inputType="number"
                    android:textSize="18sp"
                    android:text="@string/yearText"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:background="@android:color/white"
                android:layout_marginTop="2.5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:id="@+id/typeLayout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/typeLabel"
                    android:text="@string/typesText"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/typeText"
                    android:text="@string/typesText"
                    android:textSize="18sp"
                    android:textColor="@android:color/black" />

            </LinearLayout>


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:background="@android:color/white"
                android:layout_marginTop="2.5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:id="@+id/summaryLayout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/summaryLabel"
                    android:textSize="15sp"
                    android:text="@string/summaryText"
                    android:textStyle="normal|italic" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/summaryText"
                    android:textSize="18sp"
                    android:text="@string/summaryText"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:background="@android:color/white"
                android:layout_marginTop="2.5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:id="@+id/stampLayout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/isReadText"
                    android:textSize="20sp"
                    android:text="@string/isReadText"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/isBorrowedText"
                    android:textSize="20sp"
                    android:text="@string/isBorrowedText"
                    android:layout_weight="1" />


            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:background="@android:color/white"
                android:layout_marginTop="2.5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:id="@+id/commentLayout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/commentsLabel"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:text="@string/commentText"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/commentsText"
                    android:textSize="18sp"
                    android:text="@string/commentText"
                    android:textColor="@android:color/black" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
