<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_book_library"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.basaile92.listelivre.activity.AddBookActivity"
    android:orientation="vertical"
    android:isScrollContainer="true"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="insideOverlay"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imageButton"
                    android:src="@drawable/icone"
                    android:layout_height="254dp"
                    android:layout_weight="0.49"
                    android:layout_width="254dp"
                    android:layout_alignParentTop="true" />

            </RelativeLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="2.5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="15dp"
                android:paddingTop="15dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/isbnEdit"
                    android:tag="@string/isbnText"
                    android:hint="@string/isbnText"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="2.5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="15dp"
                android:paddingTop="15dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/titleEdit"
                    android:hint="@string/titleText"
                    android:layout_weight="1"
                    android:inputType="textCapSentences" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="2.5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="15dp"
                android:paddingTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/authorsText"
                    android:text="@string/authorsText"
                    android:textSize="18sp"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_marginRight="2.5dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent">


                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:paddingLeft="2.5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/addAuthorsText"
                            android:layout_weight="4"
                            android:textSize="18sp"
                            android:textColor="@android:color/black" />

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:id="@+id/editAuthorsButton"
                            android:src="@drawable/pencil"
                            android:tint="@color/colorAccent" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="2.5dp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/addAuthorsEdit"
                            android:layout_weight="4"
                            android:hint="@string/addAuthorsText"
                            android:inputType="textCapSentences" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/addAuthorsButton"
                            android:adjustViewBounds="false"
                            android:cropToPadding="false"
                            android:src="@drawable/plus"
                            android:tint="@color/colorAccent" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="2.5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="15dp"
                android:paddingTop="15dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/publisherEdit"
                    android:hint="@string/publisherText"
                    android:inputType="textCapSentences" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="2.5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="15dp"
                android:paddingTop="15dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/yearEdit"
                    android:hint="@string/yearText"
                    android:inputType="textCapSentences" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="2.5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/typeText"
                    android:text="@string/typesText"
                    android:textSize="18sp"
                    android:gravity="center_vertical|center_horizontal|center"
                    />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/typesText"
                        android:layout_weight="4"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:textColor="@android:color/black" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:gravity="center_vertical|center_horizontal|center"
                        android:id="@+id/addTypesButton"
                        android:tint="@color/colorAccent"
                        android:src="@drawable/pencil" />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="2.5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="15dp"
                android:paddingTop="15dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/summaryEdit"
                    android:hint="@string/summaryText"
                    android:inputType="textCapSentences" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="2.5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="15dp"
                android:paddingTop="15dp">

                <CheckBox
                    android:text="@string/isReadText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/isReadCheckBox"
                    android:layout_weight="1"
                    android:checked="false" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="2.5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="15dp"
                android:paddingTop="15dp">

                <CheckBox
                    android:text="@string/isBorrowedText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/isBorrowedCheckBox"
                    android:layout_weight="3"
                    android:checked="false" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="2.5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="15dp"
                android:paddingTop="15dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/commentsEdit"
                    android:hint="@string/commentText"
                    android:inputType="textCapSentences" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="2.5dp"
                android:gravity="center">

                <ImageView
                    android:text="Send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/modifyButton"
                    android:src="@drawable/send"/>
            </LinearLayout>




        </LinearLayout>
    </ScrollView>
</LinearLayout>